src/test/deca/context/invalid/provided/testi39.deca
//Resultats :
//Erreur contextuelle
//Ligne 13 : type class expects a field or a method
class A{
    protected int x;
    int getX(){
        return x;
    }
}
{
    A a = new A();
    float b;
    a.b;
}